--- a/water_vapor_variables_[lastname]_[firstname].ipynb
+++ b/water_vapor_variables_[lastname]_[firstname].ipynb
@@ -4,18 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Congratulations!\n",
-    "If you're reading this, it probably means that you have successfully installed anaconda, created the irisnstuff virtual python environment, and opened this Jupyter Notebook up in your browser. (Or you are just editing the ipynb xml document containing this code in a text editor, in which case you are also very clever.)\n",
+    "# Welcome to this Jupyter Notebook!\n",
+    "## Step 0 - Rename this file\n",
+    "Up at the top of this window, you should see that the name of this file is `water_vapor_variables_[lastname]_[firstname]`. Click it, and change `[lastname]` to your last name, and `[firstname]` to, say, your first name.\n",
+    "## Step 1 - Run some code...\n",
+    "Go ahead and click on the block of code below and click \"Run\" above, or press shift+enter on your keyboard to run the code.\n",
     "\n",
+    "### A note about MyBinder\n",
+    "If you are editing this code online, just know that when the binder closes, your work is gone. In order to save your progress, you must download this file. If you need to work on this assignment in multiple sessions, then download your file when you leave, and upload the version you downloaded when you start the Binder up again.\n",
+    "\n",
+    "### About the code (for first-timers)\n",
     "The first lines of code below are \"import\" statements. If you're not familiar with Python, it is a general-purpose interpreted language, and to get more specific functionality (like for atmospheric science), people write packages (like metpy or xarray) to extend python's functionality. You probably installed these packages yourself a few minutes ago.\n",
     "\n",
     "This next line after that sets up some map plotting preferences.\n",
     "\n",
-    "The block after that defines a function used to plot the same coastlines, state lines, and country borders in each of the two plots you will later make.\n",
-    "## Step 0 - Rename this file\n",
-    "Up at the top of this window, you should see that the name of this file is `water_vapor_variables_[lastname]_[firstname]`. Click it, and change `[lastname]` to your last name, and `[firstname]` to, say, your first name.\n",
-    "## Step 1 - Run some code...\n",
-    "Go ahead and click on the block of code below and click \"Run\" above, or press shift+enter on your keyboard to run the code."
+    "The block after that defines a function used to plot the same coastlines, state lines, and country borders in each of the two plots you will later make."
    ]
   },
   {
@@ -57,7 +60,9 @@
    "metadata": {},
    "source": [
     "## Step 2 - Read some data\n",
-    "In order to read in the data to plot for this assignment, you will need to be sure to have the NAM (North American Mesoscale) model output in the same directory as the jupyter notebook file. Once you have the NAM data downloaded and in the folder with this notebook, go ahead and run the code block below"
+    "In order to read in the data to plot for this assignment, you will need to be sure to have the NAM (North American Mesoscale) model output in the same directory as the jupyter notebook file. If you're running this code online, the file is already where it needs to be, and you can run the code below. If you downloaded the code to your computer and created a virtual environment to run it, be sure to download the NAM data first.\n",
+    "\n",
+    "If you're not sure what all that meant, then just run the code below."
    ]
   },
   {
@@ -82,7 +87,7 @@
    "metadata": {},
    "source": [
     "## Step 3 - Code up your calculations\n",
-    "Use the material in §3.4.2 and §3.4.3 to calculate in the cell below the mixing ratio and virtual temperature using the specific humidity and air temperature you read in the cell above. (You will need to uncomment the code; I used block comments, which in python consist of three apostrophies at the beginning and at the end of the commented-out code.)\n",
+    "Use the material in §3.4.2 and §3.4.3 to calculate in the cell below the mixing ratio and virtual temperature using the specific humidity and air temperature you read in the cell above. (You will need to uncomment the code; I used block comments, which in python consist of three apostrophies at the beginning and at the end of the commented-out code. Delete the two sets of three apostrophes and edit the code.)\n",
     "\n",
     "_HINT:_ the virtual temperature calculation below will make use of both `air_temp` and `specific_humidity`. In order to give `virt_temp` the attriburtes of `air_temp` (including the units of Kelvins), you will want to replace `specific_humidity` in your `virt_temp` calculation below `specific_humidity.data`. This will use just the numbers from `specific_humidity`, ignore its other attributes, and use the attributes from `air_temp` instead. (If you do not do this, the unit conversions will fail.)"
    ]
@@ -261,13 +266,15 @@
    "metadata": {},
    "source": [
     "## Step 6 - Turn this in!\n",
-    "Once your plots look good, save your jupyter notebook. You can go ahead and close the browser tab, and kill the Jupyter server that's been running this whole time (`ctrl+c` a couple of times in the terminal window should do it). Your Jupyter Notebook file will be your canvas submission!"
+    "Once your plots look good, save your jupyter notebook.\n",
+    "\n",
+    "If you are running this online, **download the notebook file**. Do not close this browser tab until you are sure you have downloaded this You can go ahead and close the browser tab, and kill the Jupyter server that's been running this whole time (`ctrl+c` a couple of times in the terminal window should do it). Your Jupyter Notebook file will be your canvas submission!"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
