fixed submission instructions a bit
There were some typos and leftover text from when this was to be run on a local machine.

--- a/water_vapor_variables_[lastname]_[firstname].ipynb
+++ b/water_vapor_variables_[lastname]_[firstname].ipynb
@@ -268,7 +268,7 @@
     "## Step 6 - Turn this in!\n",
     "Once your plots look good, save your jupyter notebook.\n",
     "\n",
-    "If you are running this online, **download the notebook file**. Do not close this browser tab until you are sure you have downloaded this You can go ahead and close the browser tab, and kill the Jupyter server that's been running this whole time (`ctrl+c` a couple of times in the terminal window should do it). Your Jupyter Notebook file will be your canvas submission!"
+    "If you are running this online, **download the notebook file**. Do not close this browser tab until you are sure you have downloaded this! Your Jupyter Notebook file will be your canvas submission!"
    ]
   }
  ],
